--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -22,7 +22,14 @@ ja:
   number:
     currency:
       format:
-        unit: "円"  # 通貨単位を「円」に設定
-        format: "%n%u"  # 数字の後に単位を付ける形式
-        delimiter: ","  # 千の位の区切り文字をカンマに設定
-        precision: 0  # 小数点以下の桁数を0に設定
+        unit: "円"
+        format: "%n%u"
+        delimiter: ","
+        precision: 0
+  views:
+    pagination:
+      previous: "前へ"
+      next: "次へ"
+      truncate: "..."
+      last: "最後へ"
+      first: "最初へ"
