住所を登録できるように

--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     models:
       product: 商品
+      address: 住所
     attributes:
       product:
         name: 商品名
@@ -9,6 +10,12 @@ ja:
         description: 商品説明
         position: 表示順
         image: 商品画像
+      address:
+        zip_code: 郵便番号
+        prefecture: 都道府県
+        city: 市区町村
+        street: それ以降の住所
+        building: 建物名
     errors:
       models:
         product:
